--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>gitPractice</title>
 </head>
 <body>
-    i am practicing git. dfghfdg
+    i am practicing git. dfghfdg. 
+    here is my second thing doing.
 </body>
 </html>
