--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 <body>
     i am practicing git. dfghfdg. 
     here is my second thing doing.
+    <h1>hello world. </h1>
+    <h2>hello world. </h2>
+    
+
+
+
 </body>
 </html>
